--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@electron/fuses": "^1.8.0",
     "@eslint/compat": "^1.0.3",
     "@eslint/js": "^9.4.0",
+    "@types/lodash": "^4.17.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -61,6 +62,7 @@
     "dayjs": "^1.11.11",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^9.0.0",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^3.4.0",
     "maplibre-gl": "^4.3.2",
     "react": "^18.3.1",
